<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dwarven Skill</string>
    <string name="action_settings">Settings</string>
    <string name="options_b">Options</string>
    <string name="new_b">Create New World</string>
    <string name="load_b">Continue Playing</string>
    <string name="dev_b">Developer</string>
    <string name="wiki_b">Wiki</string>
    <string name="header">Dwarven Skill</string>
    <string name="df_link">Dwarf Fortress Link</string>
    <string name="title_activity_dev_info">DevInfo</string>
    <string name="devInfo_header">Developer</string>
    <string name="devInfo_content"><![CDATA[<b>Developer</b> <br></br><br></br> Julian Dottermusch <br></br><br></br> Ginsterweg 1 <br></br> 22880 Wedel <br></br> Germany <br></br><br></br> Telefon: 0000 2934854 <br></br> E-Mail: JulianDottermusch@gmx.de]]></string>
    <string name="title_activity_ingame">Ingame</string>
    <string name="title_activity_df">DF</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_wiki">Wiki</string>
    <string name="wiki_placeholder"><![CDATA[<b>Sorry, no content yet!</b>]]></string>
    <string name="title_activity_ingame_surface">IngameSurface</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="title_activity_waiter">Waiter</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_game_menu">GameMenu</string>

</resources>