<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:background="#000000"
  tools:context=".MainActivity" >

  	<ImageButton
  		android:id="@+id/df_link"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentBottom="true"
  		android:layout_centerHorizontal="true"
  		android:src="@drawable/df_link"
  		android:onClick="openWebURL"
  		android:contentDescription="@string/df_link" />
   
  	<TextView
 		android:id="@+id/header"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentTop="true"
  		android:layout_centerHorizontal="true"
  		android:layout_marginTop="30dp"
  		android:textColor="#FFFFFF"
  		android:text="@string/header" 
  		android:textAppearance="?android:attr/textAppearanceLarge" />

  	<LinearLayout
  		android:id="@+id/mm_bottom_row"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_centerHorizontal="true"
  		android:layout_centerVertical="true"
 		android:orientation="vertical" >

  			<Button
  				android:id="@+id/new_b"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:onClick="startNewGame"
  				android:startColor="#000000"
                android:endColor="#000000"
                android:textColor="#FFFFFF"
  				android:text="@string/new_b" />

  			<Button
  				android:id="@+id/load_b"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:textColor="#FFFFFF"
  				android:startColor="#000000"
                android:endColor="#000000"
  				android:enabled="false"
  				android:text="@string/load_b" />

  			<Button
  				android:id="@+id/options_b"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:textColor="#FFFFFF"
  				android:startColor="#000000"
                android:endColor="#000000"
  				android:enabled="false"
  				android:text="@string/options_b" />

 			<Button
  				android:id="@+id/dev_b"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:onClick="loadDevInfo"
  				android:startColor="#000000"
                android:endColor="#000000"
  				android:textColor="#FFFFFF"
  				android:text="@string/dev_b" />

  			<Button
  				android:id="@+id/wiki_b"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:onClick="showWiki"
  				android:startColor="#000000"
                android:endColor="#000000"
  				android:textColor="#FFFFFF"
  				android:text="@string/wiki_b" />
  	</LinearLayout>

</RelativeLayout>